# paf2sxs

./: CMakeLists.txt  LICENSE  README.md
src/: cigar.cpp  cigar.hpp  main.cpp  paf.cpp  paf.hpp
